--- a/bands/index.html
+++ b/bands/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../media/js/backbone.min.js"></script>
     <script type="text/javascript" src="../media/js/icanhaz.min.js"></script>
     <script type="text/javascript" src="../media/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../media/js/bands.js"></script>
+    <script type="text/javascript" src="bands.js"></script>
 <style type="text/css">
 .bands li {
     cursor: pointer;
