--- a/bands/index.html
+++ b/bands/index.html
@@ -2,126 +2,137 @@
 <html lang="en">
 <head>
     <title>Bands</title>
-    <link rel="stylesheet" type="text/css" href="../media/css/bootstrap.min.css"></link>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="../media/css/bootstrap.min.css"></link>
     <script type="text/javascript" src="../media/js/jquery.min.js"></script>
     <script type="text/javascript" src="../media/js/underscore.min.js"></script>
     <script type="text/javascript" src="../media/js/backbone.min.js"></script>
-    <script type="text/javascript" src="../media/js/icanhaz.min.js"></script>
+    <script type="text/javascript" src="../media/js/ejs.min.js"></script>
     <script type="text/javascript" src="../media/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bands.js"></script>
 <style type="text/css">
 .bands li {
-    cursor: pointer;
+  cursor: pointer;
 }
 .band h4 {
-    display: inline;
+  display: inline;
 }
 </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="row">
-        <div class="span4 bands-cx"></div>
-        <div class="offset2 span4 band-cx"></div>
-    </div>
+  <div class="row">
+    <div class="span4 bands-cx"></div>
+    <div class="offset2 span4 band-cx"></div>
+  </div>
 </div>
 
-<script id="band" type="text/html">
-{{#attributes}}
-<div class="band">
-    <h4>{{name}}</h4>, <em>{{year_formed}}</em>
+<div id="band" class="template" type="text/html">
+  <div class="band">
+    <h4><%= name %></h4>, <em><%= year_formed %></em>
     <h5>Members</h5>
     <ul>
-    {{#members}}
-        <li>{{name}}</li>
-    {{/members}}
+    <% _.each(members, function(member) {  %>
+      <li><%= member.name %></li>
+    <% }) %>
     </ul>
+  </div>
 </div>
-{{/attributes}}
-</script>
 
-<script id="list" type="text/html">
-<ul class="bands">
-{{#models}}
-    {{#attributes}}
-    <li id="band-{{id}}">{{name}}</li>
-    {{/attributes}}
-{{/models}}
-</ul>
-</script>
+<div id="list" class="template" type="text/html">
+  <ul class="bands">
+  <% _.each(models, function(band) { %>
+    <li id="band-<%= band.get('id') %>"><%= band.get('name') %></li>
+  <% }) %>
+  </ul>
+</div>
 
 <script type="text/javascript">
+var Templates = {};
+$(".template").each(function() {
+  var id = $(this).attr("id");
+  var ejs = $(this).get(0).innerHTML;
+  ejs = ejs.replace(/&lt;/g, '<');
+  ejs = ejs.replace(/&gt;/g, '>');
+  Templates[id] = ejs;
+  $(this).remove();
+});
+
 var Band = new Backbone.Model();
 
 var Bands = new Backbone.Collection({
-    model: Band
+  model: Band
 });
 
 var BandView = Backbone.View.extend({
 
-    el: ".band-cx",
+  el: ".band-cx",
 
-    template: "band",
+  template: "band",
 
-    render: function() {
-        $(this.el).html(ich[this.template](this.model));
-    }
+  render: function() {
+    var template = Templates[this.template];
+    var $html = $(_.template(template, this.model.attributes));
+    $(this.el).html($html);
+  }
 
 });
 
 var BandsView = Backbone.View.extend({
 
-    el: ".bands-cx",
+  el: ".bands-cx",
 
-    template: "list",
+  template: "list",
 
-    events: {
-        "click li": "onBandClick"
-    },
+  events: {
+    "click li": "onBandClick"
+  },
 
-    render: function() {
-        $(this.el).html(ich[this.template](this.collection));
-    },
+  render: function() {
+    var template = Templates[this.template];
+    var $html = $(_.template(template, this.collection));
+    $(this.el).html($html);
+  },
 
-    onBandClick: function(e) {
-        e.preventDefault();
-        var $node = $(e.target);
-        var id = $node.attr("id").replace("band-", "");
-        var band = this.collection.get(id);
-        var band_view = new BandView({
-            model: band
-        });
-        band_view.render();
-        App.navigate("/band/"+id);
-    }
+  onBandClick: function(e) {
+    e.preventDefault();
+    var $node = $(e.target);
+    var id = $node.attr("id").replace("band-", "");
+    var band = this.collection.get(id);
+    var band_view = new BandView({
+      model: band
+    });
+    band_view.render();
+    App.navigate("/band/"+id);
+  }
 });
 
 Bands.reset(band_data);
 
 var Router = Backbone.Router.extend({
-    routes: {
-        "": "home",
-        "bands/": "home"
-    },
-    home: function() {
-        var bands_view = new BandsView({
-            collection: Bands
-        });
-        bands_view.render();
+  routes: {
+    "": "home",
+    "bands/": "home",
+    "band/:band": "home",
+  },
+  home: function(band) {
+    var bands_view = new BandsView({
+      collection: Bands
+    });
+    bands_view.render();
+    console.warn(band);
+    if (band) {
+      $("#band-" + band).trigger("click");
     }
+  }
 });
 
 $(document).ready(function() {
-    window.App = new Router();
-    Backbone.history.start({pushState: true});
+  window.App = new Router();
+  Backbone.history.start({pushState: true});
 });
 </script>
 
 </body>
 </html>
-
-
-
-
